# claude-code

./: PHOTO_GUIDE.md  our_story_timeline.html
content-trends-analyzer/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
content-trends-analyzer/config/: example_config.yaml
content-trends-analyzer/src/: __init__.py  cli.py
content-trends-analyzer/src/analysis/: __init__.py  processor.py  sentiment.py  trend_detector.py
content-trends-analyzer/src/collectors/: __init__.py  base.py  meta.py  rss.py  twitter.py  youtube.py
content-trends-analyzer/src/models/: __init__.py  config.py  content.py  trend.py
content-trends-analyzer/src/reporting/: __init__.py  generator.py
content-trends-analyzer/src/storage/: __init__.py  database.py  repository.py
content-trends-analyzer/src/utils/: scheduler.py
referral-system/: PROJECT_SUMMARY.md  README.md  RECOMMENDATIONS.md  SETUP_GUIDE.md  SETUP_SQLITE.md  docker-compose.yml  schema-sqlite.prisma  schema.prisma
referral-system/backend/: .env.example  package.json
referral-system/backend/src/: server.ts
referral-system/backend/src/auth/: auth.service.ts
referral-system/backend/src/common/: logger.ts  middleware.ts
referral-system/backend/src/drive/: drive.service.ts
referral-system/backend/src/files/: file.service.ts
referral-system/backend/src/notifications/: notification.service.ts
referral-system/backend/src/submissions/: submission.service.ts
referral-system/frontend/: package.json
referral-system/frontend/src/pages/: Dashboard.tsx
